package S191220124.task2.src;

import S191220124.task2.src.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
